<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66a9fffd"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:src="@drawable/rasm"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_marginLeft="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="italic"
                android:typeface="serif"
                android:text="@string/dasturchi"
                android:layout_gravity="bottom"/>
        </FrameLayout>


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#000"
            android:text="@string/uyin"
        />
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:typeface="serif"
            android:textColor="#410c0c"
            android:text="@string/e_tiboringiz_uchun"

        />

    </LinearLayout>


</LinearLayout>