<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66a9fffd"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textcount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/core"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <Chronometer
                    android:id="@+id/textTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />


            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:onClick="Pause"
            android:layout_marginTop="8dp"
            android:text="@string/pause"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif"

            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/group"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/bt1"
                    style="@style/ButtonStyle"
                    tools:text="1" />

                <Button
                    android:id="@+id/bt2"
                    style="@style/ButtonStyle"
                    android:layout_toRightOf="@id/bt1"
                    tools:ignore="RtlHardcoded"
                    tools:text="2" />

                <Button
                    android:id="@+id/bt3"
                    style="@style/ButtonStyle"
                    android:layout_toRightOf="@id/bt2"
                    tools:ignore="RtlHardcoded"
                    tools:text="3" />

                <Button
                    android:id="@+id/bt4"
                    style="@style/ButtonStyle"
                    android:layout_toRightOf="@id/bt3"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt5"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt1"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt6"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt2"
                    android:layout_toRightOf="@id/bt5"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt7"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt1"
                    android:layout_toRightOf="@id/bt6"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt8"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt1"
                    android:layout_toRightOf="@id/bt7"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt9"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt5"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt10"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt5"
                    android:layout_toRightOf="@id/bt5"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt11"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt6"
                    android:layout_toRightOf="@id/bt6"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt12"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt7"
                    android:layout_toRightOf="@id/bt7"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt13"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt9"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt14"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt10"
                    android:layout_toRightOf="@id/bt5"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt15"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt11"
                    android:layout_toRightOf="@id/bt6"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />

                <Button
                    android:id="@+id/bt16"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/bt12"
                    android:layout_toRightOf="@id/bt7"
                    tools:ignore="RtlHardcoded"
                    tools:text="4" />
            </RelativeLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button2"
                    android:onClick="Finish"
                    android:text="@string/finish1"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_marginLeft="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button2"
                    android:onClick="Restart"
                    android:text="@string/restart1"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    android:typeface="serif" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/visiblitiy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#846e94b4"
        android:clickable="true"
        android:focusable="true"

        android:visibility="gone">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:background="#ba4c7da7"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/siz_g_olib_bo_ldingiz"
                android:textColor="#2d0505"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Next"
                android:text="@string/restart"
                android:textSize="22sp"
                android:typeface="serif" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Chiqish"
                android:text="@string/finish"
                android:textSize="22sp"
                android:typeface="serif" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/pouseVis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#846e94b4"
        android:clickable="true"
        android:focusable="true"

        android:visibility="gone">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:background="#ba4c7da7"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boshlash"
                android:textSize="22sp"
                android:typeface="serif" />


        </LinearLayout>
    </FrameLayout>
</FrameLayout>